--- a/templates/index.html
+++ b/templates/index.html
@@ -388,9 +388,11 @@
         }
 
         .pokemon-sprite img {
-            max-width: 90px;
-            max-height: 90px;
-            image-rendering: pixelated;
+            max-width: 120px;
+            max-height: 120px;
+            image-rendering: auto;
+            -webkit-image-rendering: crisp-edges;
+            image-rendering: crisp-edges;
         }
 
         .pokemon-name {
