--- a/templates/game.html
+++ b/templates/game.html
@@ -238,10 +238,10 @@
         }
 
         .guess-sprite {
-            width: 60px;
-            height: 60px;
-            image-rendering: pixelated;
-            image-rendering: -moz-crisp-edges;
+            width: 120px;
+            height: 120px;
+            image-rendering: auto;
+            -webkit-image-rendering: crisp-edges;
             image-rendering: crisp-edges;
         }
 
